[package]
name = "impact"
authors = ["Vadim Starostin"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
rodio = "0.15.0"
repl-rs = "0.2.6"
rusqlite = { version = "0.27.0", features = ["bundled"] }
id3 = "1.1.0"